--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
-spring.application.name=movieapi
+spring.application.name=movie_catalog
+
+spring.datasource.url=jdbc:mysql://localhost:3306/movie_catalog
+spring.datasource.username=lucas
+spring.datasource.password=123
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.sql.init.mode=always
+springdoc.api-docs.path=/api-docs springdoc.swagger-ui.path=/swagger-ui.html
